// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DayviewTimelineComponent should match snapshot 1`] = `
<div
  id="root1"
>
  <div
    class="absolute inset-0 flex"
  >
    <div
      class="time h-full w-24 overflow-hidden bg relative"
    >
      <div
        class="relative h-16 z-50"
        header=""
      >
        <div
          class="bg absolute top-0 left-0 right-0 bottom-8"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           12 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           1 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           2 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           3 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           4 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           5 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           6 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           7 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           8 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           9 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           10 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           11 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           12 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           1 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           2 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           3 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           4 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           5 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           6 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           7 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           8 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           9 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           10 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           11 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      
      <div
        class="absolute h-8 w-px top-8 right-0 bg-gray-300"
      />
    </div>
    <div
      class="h-full flex-1 flex flex-col w-1/2"
    >
      <div
        class="flex relative overflow-hidden border-b border-gray-300 border-opacity-50 bg h-16 w-full"
        header=""
      >
        
      </div>
      <div
        class="relative flex flex-1 overflow-auto"
        content=""
      >
        
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 0rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 4rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 8rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 12rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 16rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 20rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 24rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 28rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 32rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 36rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 40rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 44rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 48rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 52rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 56rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 60rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 64rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 68rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 72rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 76rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 80rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 84rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 88rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 0rem; top: 92rem;"
        />
        
      </div>
    </div>
    
    
  </div>
</div>
`;

exports[`DayviewTimelineComponent should match snapshot 2`] = `
<div
  id="root1"
>
  <div
    class="absolute inset-0 flex"
  >
    <div
      class="time h-full w-24 overflow-hidden bg relative"
    >
      <div
        class="relative h-16 z-50"
        header=""
      >
        <div
          class="bg absolute top-0 left-0 right-0 bottom-8"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           12 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           1 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           2 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           3 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           4 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           5 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           6 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           7 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           8 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           9 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           10 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           11 AM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           12 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           1 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           2 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           3 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           4 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           5 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           6 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           7 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           8 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           9 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           10 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      <div
        change-transform=""
        class="relative h-16 border-r border-gray-300 z-10"
        style="transform: translateY(-0px);"
      >
        <div
          class="absolute text-center w-full text-xs top-0 transform -translate-y-1/2 opacity-40"
        >
           11 PM 
        </div>
        <div
          class="absolute h-px w-2 top-0 right-0 bg-gray-300"
        />
      </div>
      
      <div
        class="absolute h-8 w-px top-8 right-0 bg-gray-300"
      />
    </div>
    <div
      class="h-full flex-1 flex flex-col w-1/2"
    >
      <div
        class="flex relative overflow-hidden border-b border-gray-300 border-opacity-50 bg h-16 w-full"
        header=""
      >
        <div
          change-transform=""
          class="relative h-16 w-48 min-w-[12rem]"
          style="transform: translateX(-0px);"
        >
          <div
            bar=""
            class="absolute h-8 w-px bottom-0 -left-px bg-gray-300"
          />
          <div
            class="name m-2 text-center"
          >
              
          </div>
        </div>
        
      </div>
      <div
        class="relative flex flex-1 overflow-auto"
        content=""
      >
        <dayview-space
          class="w-48 min-w-[12rem] h-[96rem]"
        />
        
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 0rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 4rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 8rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 12rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 16rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 20rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 24rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 28rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 32rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 36rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 40rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 44rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 48rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 52rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 56rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 60rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 64rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 68rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 72rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 76rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 80rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 84rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 88rem;"
        />
        <div
          class="absolute bg-gray-300 h-px min-w-full left-0"
          style="width: 12rem; top: 92rem;"
        />
        
      </div>
    </div>
    
    
  </div>
</div>
`;
